--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-uvicorn==0.34.0
-mysql==0.0.3
-openai==1.82.0
-fastapi==0.115.6
-pydantic==1.10.12
+fastapi
+uvicorn[standard]
+gunicorn
+
+openai>=1.0.0
+
+pillow
+pillow-avif-plugin
+
+mysql-connector-python
+
+pydantic
