--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
 fastapi
-uvicorn[standard]
-gunicorn
-
-openai>=1.0.0
-
+uvicorn
+openai>=1.3.8
 pillow
 pillow-avif-plugin
-
 mysql-connector-python
-
 pydantic
+
