--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 fastapi
 uvicorn
 openai>=1.3.8
-pillow
-pillow-avif-plugin
 mysql-connector-python
-pydantic
+#pillow
+#pillow-avif-plugin
+#pydantic
+
 
