--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 fastapi
 uvicorn
-openai>=1.3.8
+gunicorn
 mysql-connector-python
 pillow
 pillow-avif-plugin
+python-dotenv
+openai
 pydantic
-
 
 
