--- a/.github/workflows/main_autentica.yml
+++ b/.github/workflows/main_autentica.yml
@@ -14,20 +14,28 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     permissions:
-      contents: read  # This is required for actions/checkout
+      contents: read  # Required for checkout
 
     steps:
+      # Checkout repo
       - uses: actions/checkout@v4
 
+      # Configure Python
       - name: Set up Python version
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
-      # 🛠️ Local Build Section (Optional)
-      # This section installs dependencies to catch build issues early.
+      # Optional local build to ensure dependencies install correctly
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
 
-      # 🚀 Deploy directly to Azure Web A
+      # 🚀 Deploy directly to Azure Web App (no artifacts, no oryx packaging)
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: 'autentica'   # ⬅️ NOME CORRETTO DELLA TUA APP SERVICE
+          slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3F2E926CF57C449DAAF27FD899615AB7 }}
+          package: .    # ⬅️ Deploya TUTTA la repo così com'è, inclusa cartella certs/
