--- a/.github/workflows/main_autentica.yml
+++ b/.github/workflows/main_autentica.yml
@@ -36,7 +36,9 @@ jobs:
           name: python-app
           path: |
             .
+            certs/**
             !antenv/
+
 
   deploy:
     runs-on: ubuntu-latest
@@ -55,3 +57,4 @@ jobs:
           app-name: 'autentica'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3F2E926CF57C449DAAF27FD899615AB7 }}
+
