--- a/.github/workflows/main_autentica.yml
+++ b/.github/workflows/main_autentica.yml
@@ -18,6 +18,7 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'autentica'
+          app-name: 'autentica-backend'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
           package: release.zip
+
